# implementation_is_illustration

./: .gitignore  CMakeLists.txt  README.md  build_log.txt  build_log_v2.txt  build_log_v3.txt  build_log_v4.txt  build_log_v5.txt  build_log_v6.txt  build_log_verbose.txt  imgui.ini  rk4_integration_styles.txt  trace_dot_cross.json  trace_matrix.json  vscode_launch.json
examples/: basic_usage.cpp  basic_usage.md  benchmark_mixed.cpp  benchmark_parameter.cpp  example_dot_cross.cpp  example_matrix.cpp
examples/shared/: DemoCases.hpp
examples/shared/demos/: DemoUtils.hpp  FrenetSerretDemo.hpp  IKDemo.hpp  MatrixDemo.hpp  RK4Demo.hpp  RaySphereDemo.hpp  SolarSystemDemo.hpp
iii_opengl_poc/: CMakeLists.txt  README.md
iii_opengl_poc/src/: GLMeshes.hpp  GLRenderer.cpp  GLRenderer.hpp  GLShaders.hpp  MathHelpers.hpp  TestCases.hpp  VisualizerApp.cpp  VisualizerApp.hpp  main.cpp
include/iii/: Function.hpp  IEventListener.hpp  Math.hpp  Matrix.hpp  Parameter.hpp  Recorder.hpp  Vector.hpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: Recorder.cpp
